# exif-paranoia

./: .editorconfig  Cargo.toml
res/en/: messages.ftl
res/ko-KR/: messages.ftl
res/ko-Kore/: messages.ftl
src/: i18n.rs  main.rs
