[package]
name = "exif-paranoia"
version = "0.1.0"
edition = "2021"
include = ["res/*/*.ftl"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dioxus = "0.3.1"
dioxus-desktop = "0.3.0"
dioxus-helmet = "0.2.4"
fluent-bundle = "0.15.2"
fluent-langneg = "0.13.0"
itertools = "0.10.5"
sys-locale = "0.2.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tuple = "0.5.1"
unic-langid = { version = "0.9.1", features = ["serde", "macros", "likelysubtags"] }

[dev-dependencies]
# TODO: I want to find out the way to hot-reload the Dioxus Desktop app...
dioxus-desktop = { version = "0.3.0", features = ["hot-reload"] }
